faked comments form

--- a/www/templates/detail-artwork.html
+++ b/www/templates/detail-artwork.html
@@ -14,7 +14,7 @@
 				</ion-scroll>
 			</div>
 			<div class='artistLowerInfo'>
-				<div class="row">
+				<div class="row" ng-show="showArea == 'area1'">
 					<ion-scroll direction="y" class='col detailScrollTall' has-bouncing="false" overflow-scroll="false">
 						<div class='unit' ng-if='artwork.artist'>
 							<h5>Artist</h5>
@@ -40,13 +40,42 @@
                         <br/><br/><br/><br/>
 					</ion-scroll>
 				</div>
+                <div ng-show="showArea == 'area5'" >
+                    <ion-scroll class='col detailScroll' has-bouncing="false" overflow-scroll="false">
+                        <div class='unit comments'>
+							<h5>Comments</h5>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis fermentum odio. Nam tempus odio quis metus venenatis, mollis maximus enim pellentesque.
+                                <small>John, 10/14/2016</small>
+                            </p>
+                            <p>
+                                Curabitur auctor cursus gravida. Duis blandit magna nisl, at pulvinar orci porta sit amet. Curabitur faucibus, est a placerat ultrices, urna mi convallis lectus, non egestas est purus ac turpis. Phasellus aliquam, metus vel luctus pulvinar, metus enim sodales lacus, sit amet sollicitudin odio neque a sapien. Sed ultricies arcu diam, a tristique erat gravida at. Donec id mauris sem.
+                                <small>Jane, 10/13/2016</small>
+                            </p>
+                        </div>
+                        <div class='unit commentForm'>
+                            <h5>Add Your Comment</h5>
+                            <form>
+                                <p>
+                                    <input type="text" name="firstname" placeholder="First name"> <input class="search-bar" type="text" name="lastname" placeholder="Last name"> <input type="text" name="email" placeholder="Email"> <button type="submit"><i class="icon icon ion-android-done"></i></button>
+                                </p>
+                                <textarea placholder="Enter your comment..."></textarea>
+                                
+                            </form>
+                        </div>
+                    </ion-scroll>
+                </div>
 			</div>				
 		</div>
 	</div>	
   </ion-content>
   <ion-footer-bar>
-  	<div id="footer" class='menuToggle'>
-		<a menu-toggle="left"><img src='img/MF_logo.jpg'></a>
-	</div>
-  </ion-footer-bar> 
+      <div class="footerIconBar">
+          <i class="icon icon ion-information-circled" ng-class='{"red":showArea=="area1"}' ng-click="selectShowArea('area1')"></i>
+          <i class="icon icon ion-chatbox" ng-class='{"red":showArea=="area5"}' ng-click="selectShowArea('area5')"></i>
+      </div>
+        <div id="footer" class='menuToggle'>
+            <a menu-toggle="left"><img src='img/MF_logo.jpg'></a>
+        </div>
+  </ion-footer-bar>
 </ion-view>
