--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1144,6 +1144,36 @@ p.red {
 	height:100%;
 	width:auto;
 }
+.comments p small{
+    padding-left:30px;
+    display:block;
+    margin-bottom:10px;
+}
+.commentForm input{
+	display:inline;
+	width:120px;
+	background-color:rgba(255,255,255,.1);
+	color:#FFF;
+	font-family: proximanova;
+	padding:5px;
+    margin-right:10px;
+    margin-bottom:10px;
+}
+.commentForm textarea{
+	width:75%;
+    height:75px;
+	background-color:rgba(255,255,255,.1);
+	color:#FFF;
+	font-family: proximanova;
+	padding:5px;
+}
+.commentForm button{
+	background-color:#000;
+	display:inline;
+	border:0px;
+	color:#FFF;
+	font-size:30px;
+}
 .detailScroll{
     height:calc(100vh - 494px); /* 290 upperImages height + 110 exHeader + 50 bar-footer height + 44 .bar (header) )*/
     padding-right:10px;
