--- a/www/css/style.css
+++ b/www/css/style.css
@@ -57,6 +57,10 @@ a{
 	color:#FFFFFF;
 	text-decoration:none;
 }
+a:active{
+	text-decoration:underline !important;
+    color:red !important;
+}
 /* Landscape layout (default) */
 .viewArea {
    background-color:#000;
@@ -563,8 +567,8 @@ p {
 	max-height: 500px;
 }
 */
-.floorExhibitionList{
-	height:calc(100vh - 94px); /* 50 bar-footer height + 44 .bar (header) */
+/*.floorExhibitionList{
+	height:calc(100vh - 94px);
 }
 .floorExhibitionList div.list{
 	padding-bottom:400px !important;
@@ -655,6 +659,94 @@ p {
 	background-color:#000 !important;
 	background:none;
 }
+*/
+.floorArtworkList{
+	height:calc(100vh - 94px); /* 50 bar-footer height + 44 .bar (header) */
+}
+.floorArtworkList div.list{
+	padding-bottom:400px !important;
+	padding-top:200px !important;
+}
+.floorArtworkList .item {
+	border-width:0px;
+    background: #000;
+   	opacity:.3;
+   	height:calc((100vh - 94px)/2); /* 50 bar-footer height + 44 .bar (header) */
+   	overflow:hidden;
+   	margin:0px !important;
+}
+.floorArtworkList .item h2 {
+    color: #fff;
+    font-family:proximanova;
+    font-size:14px;
+    text-shadow: 0 0 1px white;
+   	color: transparent;
+    padding-top:5px;
+}
+.floorArtworkList .active {
+    opacity:1 !important;
+}
+.floorArtworkList .active + ion-item{
+	opacity:.7 !important;
+}
+.floorArtworkList .active h2 {
+	color: #fff;
+	text-shadow:none;
+}
+.floorArtworkList .item .artworkImage{
+	/*float:left;
+	margin-right:20px;
+	height:130px;
+	width:130px;
+	overflow:hidden;*/
+    height:85%;
+}
+.floorArtworkList .item .artworkImage img{
+	height:100%;
+    width:auto;
+    object-fit: cover;
+	-webkit-filter: blur(.7px);
+	filter: blur(.7px);
+}
+.floorArtworkList .item.active .artworkImage img{
+	-webkit-filter: blur(0px);
+	filter: blur(0px);
+}
+.artworkName{
+	max-height:2em;
+	overflow:hidden;
+}
+.artworkLink{
+	font-size:12px;
+	text-transform:uppercase;
+	font-family:proximanova;
+	padding-top:10px;
+}
+.floorArtworkListInfoContainer{
+	height:250px;
+	margin-bottom:20px;
+}
+.floorArtworkListInfo{
+	text-align:center;
+}
+.floorArtworkListInfo img{
+	height:200px;
+	width:auto;
+}
+.floorArtworkListInfo .name{
+	color: #fff;
+    font-family:proximanova;
+    font-size:14px;
+}
+.floorArtworkListInfo .date{
+	padding-top:10px;
+	padding-bottom:10px;
+}
+.floorArtworkListInfo .item, .floorArtworkListInfo .item-complex{
+	border:0px;
+	background-color:#000 !important;
+	background:none;
+}
 .floorTitle{
 	font-size: 35px;
 	font-family: "ProximaNovaBold";
@@ -676,10 +768,10 @@ p {
 	.floorTitle{
 		font-size: 25px;
 	}
-	.floorExhibitionList .active h2, .floorExhibitionList .item h2, .floorExhibitionList .item .date {
+	.floorArtworkList .active h2, .floorArtworkList .item h2, .floorArtworkList .item .date {
 		font-size:14px;
 	}
-	.floorExhibitionList .item.active .exhibitName, .floorExhibitionList .item .exhibitName{
+	.floorArtworkList .item.active .artworkName, .floorArtworkList .item .artworkName{
 		padding-top:2em;
 	}
 }
@@ -827,6 +919,9 @@ p.red {
 	font-family:proximanova;
 }
 .red {
+	color:red;
+}
+.red a {
 	color:red;
 }
 .artistBio {
@@ -1128,6 +1223,9 @@ p.red {
     overflow-y: hidden;
     white-space: nowrap;	
 }
+.imageScroller > div{
+    white-space: nowrap;
+}
 .contentMain .upperImages {
 	clear:both;
 	overflow:scroll;
@@ -1141,8 +1239,25 @@ p.red {
 }
 .upperImages img{
 	/* width:500px; */
-	height:100%;
+	height:268px;
 	width:auto;
+}
+.imageScroller div.imageWrapper{
+    width:auto;
+    color:white;
+    overflow:hidden;
+    position:relative;
+    display:inline;
+}
+.imageScroller div.imageWrapper span{
+    font-size:9px;
+    line-height:1em;
+    position:absolute;
+    bottom:-18px;
+    left:0px;
+    width:99%;
+    overflow:hidden;
+    padding-left:5px;
 }
 .comments p small{
     padding-left:30px;
@@ -1219,6 +1334,9 @@ p.red {
 	}	
 	.contentMain .upperImages div{
 		height:200px;
+	}	
+	.upperImages img{
+		height:178px;
 	}
     .detailScroll{
         height:calc(100vh - 404px); /* 200 upperImages height + 110 exHeader + 50 bar-footer height + 44 .bar (header) )*/
