--- a/www/templates/detail-exhibition.html
+++ b/www/templates/detail-exhibition.html
@@ -10,7 +10,7 @@
 	<div id="deviceready" class="viewArea">
 		<div class='contentMain'>
 			<div class='upperImages'>
-				<ion-scroll direction="x" class="imageScroller"><div ng-bind-html="exhibition.pics">
+				<ion-scroll direction="x" class="imageScroller"><div style="width:auto;" ng-bind-html="exhibition.pics">
 				</div></ion-scroll>
 			</div>
 			<div class='lowerInfo'>
@@ -22,34 +22,30 @@
 						</div>
 					</div>
 				</div>
-				<div class="row" ng-show="showArea == 'area1'" ng-if="exhibition.statement || exhibition.description">
+				<div class="row" ng-show="showArea == 'area1'">
+					<ion-scroll class='col related detailScroll' has-bouncing="false" overflow-scroll="false">
+						<div class='unit' ng-if='exhibition.contributors'>
+							<h5>Artists</h5>
+							<div ng-bind-html="exhibition.contributors"></div> 
+						</div>
+						<div class='unit' ng-if='exhibition.artworks'>
+							<h5>Artworks</h5>
+							<div ng-bind-html="exhibition.artworks"></div> 
+						</div>	
+						<div class='unit' ng-if='exhibition.exhibitions'>
+							<h5>Exhibitions</h5>
+							<div ng-bind-html='exhibition.exhibitions'></div> 
+						</div>
+                        <br/><br/><br/><br/>
+					</ion-scroll>
+                </div>
+                <div class="row" ng-show="showArea == 'area2'" ng-if="exhibition.statement || exhibition.description">
 					<ion-scroll direction="y" class="col detailScroll" has-bouncing="false" overflow-scroll="false">
                         <div ng-bind-html="exhibition.description"></div>
                         <p ng-if='exhibition.statement'>
                             <H5 ng-if='exhibition.statement'>Artist Statement</H5>
                             <div ng-bind-html="exhibition.statement"></div>	
                         </p>
-                        <br/><br/><br/><br/>
-					</ion-scroll>
-                </div>
-                <div class="row" ng-show="showArea == 'area2'">
-					<ion-scroll class='col related detailScroll' has-bouncing="false" overflow-scroll="false">
-						<div class='unit' ng-if='exhibition.contributors'>
-							<h5>Contributors</h5>
-							<div ng-bind-html="exhibition.contributors"></div> 
-						</div>
-						<div class='unit' ng-if='exhibition.artworks'>
-							<h5>Artworks</h5>
-							<div ng-bind-html="exhibition.artworks"></div> 
-						</div>
-						<div class='unit' ng-if='exhibition.events'>
-							<h5>Events</h5>
-							<div ng-bind-html='exhibition.events'></div> 
-						</div>	
-						<div class='unit' ng-if='exhibition.exhibitions'>
-							<h5>Exhibitions</h5>
-							<div ng-bind-html='exhibition.exhibitions'></div> 
-						</div>
                         <br/><br/><br/><br/>
 					</ion-scroll>
                 </div>
@@ -97,8 +93,8 @@
   </ion-content>
   <ion-footer-bar>
       <div class="footerIconBar">
-          <i class="icon icon ion-ios-paper" ng-class='{"red":showArea=="area1"}' ng-if="exhibition.statement || exhibition.description" ng-click="selectShowArea('area1')"></i>
-          <i class="icon icon ion-information-circled" ng-class='{"red":showArea=="area2"}' ng-click="selectShowArea('area2')"></i>
+          <i class="icon icon ion-information-circled" ng-class='{"red":showArea=="area1"}' ng-click="selectShowArea('area1')"></i>
+          <i class="icon icon ion-ios-paper" ng-class='{"red":showArea=="area2"}' ng-if="exhibition.statement || exhibition.description" ng-click="selectShowArea('area2')"></i>
           <i class="icon icon ion-android-volume-up" ng-class='{"red":showArea=="area3"}' ng-if="exhibition.sound" ng-click="selectShowArea('area3')"></i>
           <i class="icon icon ion-location" ng-class='{"red":showArea=="area4"}' ng-click="selectShowArea('area4')"></i>
           <i class="icon icon ion-chatbox" ng-class='{"red":showArea=="area5"}' ng-click="selectShowArea('area5')"></i>
