--- a/www/templates/detail-museum_2.html
+++ b/www/templates/detail-museum_2.html
@@ -7,18 +7,19 @@
 					<span ng-bind-html="trustAsHtml(floor.floor_plan + coordinates)" class="fpOrientation{{getOrientation(floor.floor_plan)}}"></span>
 				</div>
 			</ion-scroll>
-			<ion-scroll class="col col-50 floorArtworkList" delegate-handle="floorArtworkList" on-scroll="getScrollPosition()" has-bouncing="false" overflow-scroll="false">
+			<ion-scroll class="col col-50 floorExhibitionList" delegate-handle="floorExhibitionList" on-scroll="getScrollPosition()" has-bouncing="false" overflow-scroll="false">
 				<ion-list>
-					<ion-item class='floorArtworkListItem item-text-wrap' ng-class='{"active":highlightArtwork=={{artwork.collection_id}}}' ng-repeat="artwork in artworks" type="item-text-wrap" id="artwork_{{artwork.collection_id}}" ng-click="highlightCoor({{artwork.collection_id}}); highlightArtworkTitle({{artwork.collection_id}});">
-						<div class="artworkImage" ng-if='artwork.pic' ng-bind-html='artwork.pic'></div>
-                        <h2>
-							<div class='artworkName'>{{artwork.name}}</div>
-							<div ng-if='artwork.artist' class="red" ng-bind-html="artwork.artist"></div>
-                        </h2>
+					<ion-item class='floorExhibitionListItem item-text-wrap' ng-class='{"active":highlightExhibition=={{exhibition.occurrence_id}}}' ng-repeat="exhibition in exhibitions" type="item-text-wrap" id="exhibition_{{exhibition.occurrence_id}}" ng-click="highlightCoor({{exhibition.occurrence_id}}); highlightExhibitionTitle({{exhibition.occurrence_id}});">
+						<h2>
+							<div class="exhibitImage" ng-if='exhibition.thumb' ng-bind-html='exhibition.thumb'></div>
+							<div class='exhibitName'>{{exhibition.name}}</div>
+							<div ng-if='exhibition.dates' class="red date">{{exhibition.dates}}</div>
+							<div ng-if='exhibition.occurrence_id' class='exhibitLink'><a href="#/tab/detail-exhibition/{{exhibition.occurrence_id}}">View Exhibiton</a></div>
+						</h2>
 					</ion-item>
 				</ion-list>
 				<ion-infinite-scroll
-					on-infinite="loadNextArtworkPage()" immediate-check="false"
+					on-infinite="loadNextExhibitionPage()" immediate-check="false"
 					distance="25%">
 				</ion-infinite-scroll>
 			</ion-scroll>
