--- a/www/templates/tab-onview.html
+++ b/www/templates/tab-onview.html
@@ -11,6 +11,16 @@
 						</div>
 					</div></a>
 			</ion-slide>
+			<ion-slide id="exhibition_permanent">
+					<div class="onViewSlide">
+						<div><img src='img/permanentCollage.jpg'></div>
+						<div class="exhibitionInfo">
+							<h1>Now Showing</h1>
+							<h2>Works in the Permanent Collection</h2>
+						</div>
+					</div>
+			</ion-slide>
+
 		</ion-slide-box>
 	</ion-content>
 	<ion-footer-bar>
