--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,10 +18,7 @@
         </ion-item>  
         <ion-item menu-close href="#/tab/museum">
           <i class='fa fa-building'></i> Explore the Museum	
-        </ion-item>
-        <!--<ion-item menu-close href="#/tab/neighborhood">
-          <i class='fa fa-map-marker'></i> Explore the Neighborhood
-        </ion-item>-->                      
+        </ion-item>                      
         <ion-item menu-close href="#/tab/artists">
           <i class='fa fa-smile-o'></i> Artists		
         </ion-item>
@@ -30,7 +27,10 @@
         </ion-item>  
         <ion-item menu-close href="#/tab/search">
           <i class='fa fa-search'></i> Search the Archive		
-        </ion-item>               
+        </ion-item>   
+        <ion-item menu-close href="#/tab/about">
+          <i class='fa fa-info-circle'></i> About
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
