Rough beacon support

--- a/www/templates/tab-front.html
+++ b/www/templates/tab-front.html
@@ -5,6 +5,7 @@
             <div class="frontText">
                 <h1>Mattress Factory</h1>
                 <h2>Art You Can Get Into</h2>
+                {{beacon}}
             </div>
 		</div>
 	</div>
