--- a/www/templates/detail-artist.html
+++ b/www/templates/detail-artist.html
@@ -38,9 +38,19 @@
                         <br/><br/><br/><br/>
                     </ion-scroll>
                 </div>
-               <div ng-show="showArea == 'area3'" ng-if="artist.sound">
-                    <h5>Audio</h5>
-                    <div class='unit' ng-bind-html="artist.sound"></div>
+                <div ng-show="showArea == 'area3'" ng-if="artist.audio">
+                    <ion-scroll class='col detailScroll' has-bouncing="false" overflow-scroll="false">
+                        <h5>Audio</h5>
+                        <div class='unit' ng-bind-html="trustAsHtml(artist.audio)"></div>
+                        <br/><br/><br/><br/>
+                    </ion-scroll>
+                </div>
+                <div ng-show="showArea == 'area6'" ng-if="artist.video">
+                    <ion-scroll class='col detailScroll' has-bouncing="false" overflow-scroll="false">
+                        <h5>Video</h5>
+                        <div class='unit' ng-bind-html="trustAsHtml(artist.video)"></div>
+                        <br/><br/><br/><br/>
+                    </ion-scroll>
                 </div>
                 <div ng-show="showArea == 'area5'" >
                     <ion-scroll class='col detailScroll' has-bouncing="false" overflow-scroll="false">
@@ -81,7 +91,8 @@
       <div class="footerIconBar">
           <i class="icon icon ion-information-circled" ng-class='{"red":showArea=="area1"}' ng-click="selectShowArea('area1')"></i>
           <i class="icon icon ion-ios-paper" ng-class='{"red":showArea=="area2"}' ng-if="artist.biography" ng-click="selectShowArea('area2')"></i>
-          <i class="icon icon ion-android-volume-up" ng-class='{"red":showArea=="area3"}' ng-if="artist.sound" ng-click="selectShowArea('area3')"></i>
+          <i class="icon icon ion-android-volume-up" ng-class='{"red":showArea=="area3"}' ng-if="artist.audio" ng-click="selectShowArea('area3')"></i>
+          <i class="icon icon ion-ios-videocam" ng-class='{"red":showArea=="area6"}' ng-if="artist.video" ng-click="selectShowArea('area6')"></i>
           <i class="icon icon ion-chatbox" ng-class='{"red":showArea=="area5"}' ng-click="selectShowArea('area5')"></i>
       </div>
       <div id="footer" class='menuToggle'>
