--- a/www/templates/detail-museum_1.html
+++ b/www/templates/detail-museum_1.html
@@ -9,8 +9,8 @@
 			<div class='col col-50'>
 				<ion-list class='exhibitionListInfo'>
 				  <ion-item ng-show="showExhibition == {{exhibition.occurrence_id}}" ng-repeat="exhibition in exhibitions" type="item-text-wrap" href="#/tab/detail-exhibition/{{exhibition.occurrence_id}}">
-					<div ng-if='exhibition.name' class="name">{{exhibition.name}}</div>
-					<div ng-if='exhibition.thumb' ng-bind-html='exhibition.thumb'></div>
+					<div ng-if='exhibition.name' class="name" ng-click="showExhibitionInfo({{exhibition.occurrence_id}});">{{exhibition.name}}</div>
+					<div ng-if='exhibition.thumb' ng-bind-html='exhibition.thumb' ng-click="showExhibitionInfo({{exhibition.occurrence_id}});"></div>
 					<div ng-if='exhibition.dates' class="red date">{{exhibition.dates}}</div>
 				  </ion-item>
 				</ion-list>
