--- a/www/templates/tab-artists.html
+++ b/www/templates/tab-artists.html
@@ -1,6 +1,11 @@
-<ion-view <!--view-title="Browse Mattress Factory Artists" -->>
-  <ion-content overflow-scroll="true"  delegate-handle="artistListRow" on-scroll="getScrollPosition()" has-bouncing="false">
-	<div class="artistListContainer">
+<ion-view>
+  <ion-content overflow-scroll="true" delegate-handle="artistListRow" on-scroll="getScrollPosition()" has-bouncing="true">
+      
+      <div class="spinner" ng-hide="hideSpinner">
+          <ion-spinner icon="ios"></ion-spinner>
+      </div>
+      
+	<div class="artistListContainer" id="artistListContainer">
 		<div ng-repeat="artists in artistsList" style="position:relative;" ng-class="highlightLetter==artists.letter ? 'activeLetter letterBar' : 'letterBar'" id="artist_letter_{{artists.letter}}">
 			<p class="artistLetter">{{artists.letter}}</p>
 			<div class="artistListScroller">
@@ -14,10 +19,6 @@
 				</div>
 			</div>
 		</div>
-		<ion-infinite-scroll
-			on-infinite="loadNextArtistPage()"
-			distance="100%" immediate-check="1">
-		</ion-infinite-scroll>
 	 </div>
   </ion-content>
   <ion-footer-bar>
