--- a/www/templates/detail-museum.html
+++ b/www/templates/detail-museum.html
@@ -1,6 +1,10 @@
 <ion-view on-swipe-right="$ionicGoBack()">
   <ion-content>
 		<div class="floorTitle">{{floor.parent}}<br/><span class='floorSubTitle'>{{floor.name}}</span></div>
+        
+        <div class="spinner" ng-hide="hideSpinner">
+            <ion-spinner icon="ios"></ion-spinner>
+        </div>
 		<div class="row">
 			<ion-scroll class="col col-40 col-center" has-bouncing="false" overflow-scroll="false">
 				<div id="floorPlan">
