--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -5,6 +5,7 @@
             <H2 ng-bind-html="trustAsHtml(pageContent.title ? pageContent.title : '')"></H2>
             <span ng-bind-html="trustAsHtml(pageContent.bodytext ? pageContent.bodytext : '')"></span>
         </div>
+        <div id="beaconIndicator">{{beacon}}</div>
 	</div>
   </ion-content>
   <ion-footer-bar>
