--- a/www/templates/detail-artwork.html
+++ b/www/templates/detail-artwork.html
@@ -1,6 +1,9 @@
 <ion-view on-swipe-right="$ionicGoBack()">
   <ion-content has-bouncing="false" overflow-scroll="false">
-
+      <div class="spinner" ng-hide="hideSpinner">
+          <ion-spinner icon="ios"></ion-spinner>
+      </div>
+      
 	<div id="deviceready" class="viewArea">
 		<div class='contentMain'>
 			<div class='headerMain'>
